2007-11-27 Chris Morley

	src/formats/smilesformat.cpp: Replace ReadMolecule and add
	isNotSmiles(). Lines starting with non-SMILES characters are ignored.
	Input stream left at first non-SMILES char unless a whitespace.
	(WriteMolecule) Add options smilesonly and nonewline to ease
	rsmiformat. Not intended to be public.
	
	* src/formats/rsmiformat.cpp: New file for Reaction SMILES format

2007-11-27  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/forcefield.cpp (VectorOOPDerivative): Calculate forces, as
	per Tim's reference.

	* src/forcefields/forcefielduff.cpp: Use it.

	* tools/obminimize.cpp: Fix a bug to use conjugate gradients when
	-cg is specified. (Explosions seem to occur more often with CG for me.)

2007-11-27  Tim Vandermeersch <tim.vandermeersch@gmail.com>

	* src/forcefields/forcefieldmmff94.*, data/mmffsymb.par: Formal
	charges are now assigned correctly.

2007-11-25  Patrick Spendrin, Christian Ehrlicher
	
	* */CMakeLists.txt: some improvements to get it running under win32

2007-11-25 Chris Morley

	* src/dlhandler_win32.cpp, generic.cpp,
	
	* include/openbabel/atomclass.h, alias.h:
	Including atomclass.h and alias.h into dlhandler_win32.cpp breaks
	code segregation (OBConversion and user interfaces do not know
	about the chemistry.) Include in generic.cpp instead and change
	the build macros used by 'native' MSVC8 build from OBCOMMON to OBAPI
	I hope this fits ok with CMake.
	
2007-11-24  Patrick Spendrin, Christian Ehrlicher
	
	* include/openbabel/atomclass.h: adding support for sstream
	
	* src/config.h.cmake: cleanup
	
	* src/dlhandler_win32.cpp: improvements for msvc
	
	* */CMakeLists.txt: improving CMake based buildsystem esp. for win32
	and mingw32 - it builds now again, though there will come more improvements
	next

2007-11-18  Tim Vandermeersch <tim.vandermeersch@gmail.com>

	* src/forcefields/forcefieldmmff94.*, data/mmffsymb.par: Atom typing 
	works!!
	
	* src/forcefield.cpp, include/openbabel/forcefield.h,